# VECS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  component.cpp  component.h  ecs.h  entity.cpp  entity.h  system.h
examples/: CMakeLists.txt  example.cpp
include/: utils.hpp
include/ECS/: common.h  component.h  ecs.h  entity.h  system.h
include/VECS/comps/: Collider.hpp  Controllable.hpp  Health.hpp  Render.hpp  Transform.hpp  Velocity.hpp
include/VECS/core/: component.hpp  ecs.hpp  entity.hpp  system.hpp  vecs.hpp
include/VECS/syss/: CollisionSystem.hpp  CombatSystem.hpp  HurtingSystem.hpp  InputSystem.hpp  LoggingSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
src/: CMakeLists.txt  component.cpp  ecs.cpp  entity.cpp  main.cpp  system.cpp
tests/: CMakeLists.txt  TestVECS.cpp  testECS.cpp
